src/objects/Glxy_BudgetSubmissionData__c.object
<CustomObject>
    <fields>
        <fullName>AnnualCancellationsAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Cancellations Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualCancellationsSqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Cancellations  Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualExpansionIAAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Expansion - IA Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualExpansionIASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Expansion - IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualExpansionNOAAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Expansion - NOA Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualExpansionNOASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Expansion - NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualLumpSumAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lump Sum - Taxes; Lease Buyouts</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualRentIncreaseAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rental Increases Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualRentIncreaseSqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rental Increases Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnticipatedRecoveries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Anticipated Recoveries</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaseCostAmount__c</fullName>
        <formula>PriorYearCostAmount__c + AnnualRentIncreaseAmount__c + AnnualLumpSumAmount__c  +   AnnualCancellationsAmount__c + AnnualExpansionNOAAmount__c + IAToNOAAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BASE COST Obligations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaseCostSqFt__c</fullName>
        <formula>PriorYearCostSqFt__c +  IAToNOASqFt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BASE COST  Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetSubmissionID__c</fullName>
        <label>Budget Submission ID</label>
        <referenceTo>Glxy_BudgetSubmission__c</referenceTo>
        <relationshipLabel>Budget Submission Data</relationshipLabel>
        <relationshipName>Budget_Submission_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CancellationsIAAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Cancellations IA Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancellationsIASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Cancellations IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CancellationsNOAAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Cancellations NOA Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancellationsNOASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Cancellations NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentYearCostAmount__c</fullName>
        <formula>BaseCostAmount__c + RentIncreaseNOAAmount__c + RentIncreaseIAAmount__c +  LumpSumNOAAmount__c + LumpSumIAAmount__c +  CancellationsNOAAmount__c + CancellationsIAAmount__c +  ExpansionNOAAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CURRENT YEAR COST  Obligations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentYearCostSqFt__c</fullName>
        <formula>BaseCostSqFt__c + CancellationsNOASqFt__c + CancellationsIASqFt__c +   ExpansionNOASqFt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CURRENT YEAR COST Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataFormat__c</fullName>
        <label>Data Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RAW</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpansionIAAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Expansion - IA Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpansionIASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Expansion - IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpansionNOAAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Expansion - NOA Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpansionNOASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Expansion - NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAObligationsMinus__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IA Obligations (-)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IAObligations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indefinite Authority (IA) Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indefinite Authority (IA)  Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAToNOAAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Expansion IA to NOA Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IAToNOASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Expansion IA to NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LumpSumIAAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lump Sum - Taxes; Lease Buyouts - IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LumpSumNOAAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lump Sum - Taxes; Lease Buyouts - NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOAObligationsMinus__c</fullName>
        <formula>CurrentYearCostAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOA Obligations (-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOAObligations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Obligational Authority (NOA) Obligat</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOASqFt__c</fullName>
        <formula>CurrentYearCostSqFt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Obligational Authority (NOA)  Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearBalances__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prior Year Balances</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearCostAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PRIOR YEAR COST Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearCostSqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PRIOR YEAR COST  Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecessionMinus__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recission (-)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecordKey__c</fullName>
        <externalId>true</externalId>
        <label>Record Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RecordLastModifiedBy__c</fullName>
        <label>Record Last Modified By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordLocked__c</fullName>
        <formula>IF(
   (Text(DataFormat__c) = &apos;RAW&apos;), 
    IF(
         (BudgetSubmissionID__r.LockRAWData__c),
          true,
          false
    ), 
    IF(
         (BudgetSubmissionID__r.LockAdjustmentData__c),
          true,
          false
    )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text(BudgetSubmissionID__r.RegionCD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentIncreaseIAAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rental Increases - IA Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RentIncreaseIASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rental Increases - IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RentIncreaseNOAAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rental Increases - NOA Obligations</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RentIncreaseNOASqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rental Increases - NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportColumnIdentifier__c</fullName>
        <label>Report Column Identifier</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportingFiscalYear__c</fullName>
        <formula>BudgetSubmissionID__r.ReportingFiscalYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reprogrammings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reprogrammings (-)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubmissionType__c</fullName>
        <formula>Text(BudgetSubmissionID__r.SubmissionType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemCalculatedDateTime__c</fullName>
        <description>Date Time at which the system calculated the numbers ...</description>
        <label>System Calculated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalCurrentYearObligations__c</fullName>
        <formula>NOAObligationsMinus__c +  IAObligationsMinus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Year Obligations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalObligations__c</fullName>
        <formula>NOAObligations__c +  IAObligations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Year Authority Obligations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSqFt__c</fullName>
        <formula>NOASqFt__c +  IASqFt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Year Authority Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnobligatedBalances__c</fullName>
        <formula>NOAObligations__c +  PriorYearBalances__c +  AnticipatedRecoveries__c -  NOAObligationsMinus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unobligated Balances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Budget Submission Data</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Submission Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>GLXY_BudgetSubmissionDataCheckFiscalYear</fullName>
        <active>true</active>
        <description>The Fiscal Year field should be within +2 or -1 range compared to the Reporting Fiscal Year.</description>
        <errorConditionFormula>AND
( 

VALUE(FiscalYear__c) &lt;&gt; VALUE   (BudgetSubmissionID__r.ReportingFiscalYear__c ), 

VALUE(FiscalYear__c) &lt;&gt; (VALUE(BudgetSubmissionID__r.ReportingFiscalYear__c ) + 1), 

VALUE(FiscalYear__c) &lt;&gt; (VALUE(BudgetSubmissionID__r.ReportingFiscalYear__c ) + 2), 

VALUE(FiscalYear__c) &lt;&gt; (VALUE(BudgetSubmissionID__r.ReportingFiscalYear__c ) - 1) 

)</errorConditionFormula>
        <errorDisplayField>FiscalYear__c</errorDisplayField>
        <errorMessage>The year entered is not within the range (-1 to +2)</errorMessage>
    </validationRules>
</CustomObject>